css select e bug collapse

--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -245,7 +245,7 @@ select {
     color: white;
     font-family: "Nunito", sans-serif;
     font-size: 1.3rem;
-    padding: 0.7rem 0 0.7rem 2rem;
+    padding: 0.7rem 2.5rem 0.7rem 1.5rem;
     height: auto;
     border-radius: 4px;
     background-color: #78C7C9;
